Keycloak/ra-tls-inline-jwks.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: httpbin-authn
  namespace: sample
spec:
  selector:
    matchLabels:
      app: httpbin
  jwtRules:
  - issuer: "https://keycloak.192.168.56.102.nip.io/realms/demo"
    jwks: |
     {"keys":[{"kid":"2nH1DTevJ0GSLPv4E9Zjq5w8aUjcpMSM3fKgqOeeALk","kty":"RSA","alg":"RSA-OAEP","use":"enc","x5c":["MIIClzCCAX8CBgGZ39SEHTANBgkqhkiG9w0BAQsFADAPMQ0wCwYDVQQDDARkZW1vMB4XDTI1MTAxMzIzMDYxMFoXDTM1MTAxMzIzMDc1MFowDzENMAsGA1UEAwwEZGVtbzCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBALGHDTaknw9QfJMYHWdhobQk/NGXWgB7ixDib8jQ5hLgyMwP8nJ4RBt6Y+PHv3Av77ER4EUFX3HdbNHBzysTlRElGYDwG3nn/W6aOxFyFCSZlYgfljBk2QN10EeSN9SP3jBXI/MT9yrZ9qea1chQbATdoCn6ubYux039nuLxfxSdhqzEBtsRqHOHOgOVG60jseNCtau/ht0FesOaR6DQ [...]
     # jwks from curl -sk https://keycloak.$VIP.nip.io/realms/demo/protocol/openid-connect/certs -o jwks-demo.json
